; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmp_mibII/extr_mibII.c_mib_uncreate_ifa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bsnmp/snmp_mibII/extr_mibII.c_mib_uncreate_ifa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mibifa = type { i32, i32 }
%struct.mibif = type { i32 }

@mib_iflist_bad = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mib_uncreate_ifa(%struct.mibifa* %0) #0 {
  %2 = alloca %struct.mibifa*, align 8
  %3 = alloca %struct.mibif*, align 8
  store %struct.mibifa* %0, %struct.mibifa** %2, align 8
  %4 = load %struct.mibifa*, %struct.mibifa** %2, align 8
  %5 = getelementptr inbounds %struct.mibifa, %struct.mibifa* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.mibif* @mib_find_if(i32 %6)
  store %struct.mibif* %7, %struct.mibif** %3, align 8
  %8 = icmp eq %struct.mibif* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* @mib_iflist_bad, align 4
  br label %23

10:                                               ; preds = %1
  %11 = load %struct.mibif*, %struct.mibif** %3, align 8
  %12 = getelementptr inbounds %struct.mibif, %struct.mibif* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.mibifa*, %struct.mibifa** %2, align 8
  %15 = getelementptr inbounds %struct.mibifa, %struct.mibifa* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @siocdifaddr(i32 %13, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %10
  store i32 1, i32* @mib_iflist_bad, align 4
  br label %23

20:                                               ; preds = %10
  %21 = load %struct.mibifa*, %struct.mibifa** %2, align 8
  %22 = call i32 @destroy_ifa(%struct.mibifa* %21)
  br label %23

23:                                               ; preds = %20, %19, %9
  ret void
}

declare dso_local %struct.mibif* @mib_find_if(i32) #1

declare dso_local i64 @siocdifaddr(i32, i32) #1

declare dso_local i32 @destroy_ifa(%struct.mibifa*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
